# absurdle-solver

./: Cargo.toml  README.md  test_winners.py  winners.txt
res/: absurdle.json  absurdle_raw.json  absurdle_raw.py
src/: main.rs
