[package]
name = "absurdle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
quickcheck = "1.0.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
debug = true